--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/login/login"
+    "pages/register/register",
+    "pages/login/login",
+    "pages/index/index"
   ],
   "window": {
     "defaultTitle": "My App"
