--- a/app.json
+++ b/app.json
@@ -1,8 +1,28 @@
 {
+  "tabBar": {
+    "textColor": "#dddddd",
+    "selectedColor": "#49a9ee",
+    "backgroundColor": "#ffffff",
+    "items": [
+      {
+        "pagePath": "pages/login/login",
+        "name": "Login"
+      },
+      {
+        "pagePath": "pages/register/register",
+        "name": "Register"
+      }
+    ]
+  },
   "pages": [
+    "pages/firstLogin/firstLogin3/firstLogin3",
+    "pages/firstLogin/firstLogin2/firstLogin2",
+    "pages/firstLogin/firstLogin1/firstLogin1",
     "pages/register/register",
     "pages/login/login",
-    "pages/index/index"
+    "pages/index/index",
+    "pages/firstLogin/firstLogin2/firstLogin2",
+    "pages/firstLogin/firstLogin3/firstLogin3"
   ],
   "window": {
     "defaultTitle": "My App"
