--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     ]
   },
   "pages": [
-    
+    "pages/splash/splash",
+    "pages/mapstry/mapstry",
     "pages/firstLogin/firstLogin1/firstLogin1",
     "pages/firstLogin/firstLogin3/firstLogin3",
     "pages/firstLogin/firstLogin2/firstLogin2",
@@ -23,7 +24,9 @@
     "pages/login/login",
     "pages/index/index",
     "pages/firstLogin/firstLogin2/firstLogin2",
-    "pages/firstLogin/firstLogin3/firstLogin3"
+    "pages/firstLogin/firstLogin3/firstLogin3",
+    "pages/mapstry/mapstry",
+    "pages/splash/splash"
   ],
   "window": {
     "defaultTitle": "My App"
