--- a/app.json
+++ b/app.json
@@ -9,20 +9,21 @@
         "name": "Login"
       },
       {
-        "pagePath": "pages/register/register",
+        "pagePath": "pages/registration/register/register",
         "name": "Register"
       }
     ]
   },
   "pages": [
+    "pages/registration/register/register",
+    "pages/login/login",
     "pages/firstLogin/firstLogin3/firstLogin3",
     "pages/firstLogin/firstLogin2/firstLogin2",
     "pages/firstLogin/firstLogin1/firstLogin1",
-    "pages/register/register",
-    "pages/login/login",
     "pages/index/index",
     "pages/firstLogin/firstLogin2/firstLogin2",
-    "pages/firstLogin/firstLogin3/firstLogin3"
+    "pages/firstLogin/firstLogin3/firstLogin3",
+    "pages/registration/codeEmail/codeEmail"
   ],
   "window": {
     "defaultTitle": "My App"
